k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greeting-app
  labels:
    app.kubernetes.io/part-of: greeting-service
    prometheus.io/scrape: "true"
